--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
      <body>
           
-	 <img src onerror="alert(123)"></img> 
+	 <img src onerror="alert(window.location.hostname)"></img> 
 	 </body>
 </html>
